--- a/presence-monitor/config.json
+++ b/presence-monitor/config.json
@@ -14,9 +14,51 @@
   ],
   "boot": "auto",
   "host_network": true,
-  "host_dbus": true,
+  "privileged": [],
+  "map": [
+    "config:rw",
+    "share:rw",
+    "ssl"
+  ],
   "options": {
+    "mqtt": {
+      "broker": "127.0.0.1",
+      "port": 1883,
+      "username": "",
+      "password": "",
+      "topic_root": "/monitor",
+      "publisher": "presence_monitor",
+      "certfile": "",
+      "version": ""
+    },
+    "known": {
+      "beacons": [
+        "00:00:00:00:00:00 Nickname"
+      ],
+      "static": [
+        "00:00:00:00:00:00 Alias"
+      ]
+    },
+    "blacklist": [
+      "00:00:00:00:00:00"
+    ]
   },
   "schema": {
+    "log_level": "match(^(trace|debug|info|notice|warning|error|fatal)$)?",
+    "mqtt": {
+      "broker": "str",
+      "port": "port",
+      "username": "str",
+      "password": "str",
+      "topic_root": "str",
+      "publisher": "str",
+      "certfile": "str",
+      "version": "str"
+    },
+    "known": {
+      "beacons": ["match(^[0-9a-fA-F]{2}(:[0-9a-fA-F]{2}){5}\\s+\\w+$)"],
+      "static": ["match(^[0-9a-fA-F]{2}(:[0-9a-fA-F]{2}){5}(\\s+\\w+)*$)"]
+    },
+    "blacklist": ["match(^[0-9a-fA-F]{2}(:[0-9a-fA-F]{2}){5}$)"]
   }
 }
