Add extra arguments option (#6)

--- a/.mdlrc
+++ b/.mdlrc
@@ -7,3 +7,6 @@
 #   ${PWD}/.mdlrc
 #   ${HOME}/.mdlrc
 ################################################################################
+
+# Use a custom style.
+style '.mdlstyle.rb'
