Add dev deployer

--- a/presence-monitor/config.json
+++ b/presence-monitor/config.json
@@ -65,6 +65,6 @@
     "blacklist": [
       "match(^[0-9a-fA-F]{2}(:[0-9a-fA-F]{2}){5}$)"
     ],
-    "extra_arguments": "str"
+    "extra_arguments": "str?"
   }
 }
