Changed version to show update button.
When changing the version from dev to 0.3.3 (or new current version) the update button from the add-on will show when there is a new version available. This wel make it easier to update because we doen't have to save the config, uninstall, install en restore the config.

--- a/presence-monitor/config.json
+++ b/presence-monitor/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Bluetooth Presence Monitor",
-  "version": "dev",
+  "version": "0.3.3",
   "slug": "presence_monitor",
   "description": "Passive Bluetooth presence detection of beacons, cell phones, and other Bluetooth devices.",
   "url": "https://github.com/Limych/addon-presence-monitor",
