Remove outdated code

--- a/presence-monitor/Dockerfile
+++ b/presence-monitor/Dockerfile
@@ -19,24 +19,18 @@ RUN apt-get update \
 COPY rootfs /
 
 # Configure system
-RUN install -d \
-        /opt/monitor \
-    \
-    && cd /monitor \
+RUN install -d /opt/monitor \
     && touch \
-        .pids \
-        .previous_version \
+        /monitor/.pids \
+        /monitor/.previous_version \
         /opt/monitor/.public_name_cache \
+    # link the public name cache to the config directory ... i think there's a bug in monitor.sh
+    # where it doesn't consistently reference the same path to this... sometimes it looks in
+    # $base_directory (which we have as /opt/monitor) and sometimes its in the app root (i.e. /monitor)
+    && ln -s /opt/monitor/.public_name_cache /monitor/.public_name_cache \
     # make things executable
-    && ln -s /monitor/monitor.sh /usr/local/bin/monitor \
-    && chmod a+x \
-        monitor.sh \
-        /run.sh \
-        /health.sh \
-    # link the public name cache to the config directory ... i think there's a bug in monitor.sh where it doesn't consistently reference the same path to this...sometimes it looks in $base_directory (which we have as /opt/monitor) and sometimes its in the app root (i.e. /monitor)
-    && ln -s /opt/monitor/.public_name_cache .public_name_cache \
-    # no systemctl ... this keeps the error out about it
-    && sed -i "s|^systemctl is-active.*|SERVICE_ACTIVE=false|" support/init
+    && chmod +x /*.sh \
+    && ln -s /monitor/monitor.sh /usr/local/bin/monitor
 
 WORKDIR /monitor
 
